--- a/src/views/business.ejs
+++ b/src/views/business.ejs
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title><%= business ? business.business_name : 'Add Business' %> - WhatsApp Delivery Bot</title>
+    <title><%= business ? business.business_name : 'Add Business' %> - Novi</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="/css/groups-dashboard.css">
 </head>
