--- a/src/views/setup-business.ejs
+++ b/src/views/setup-business.ejs
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Setup Your Business - WhatsApp Delivery Bot</title>
+    <title>Setup Your Business - Novi</title>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
     <link href="/css/theme.css" rel="stylesheet">
     <style>
@@ -303,7 +303,7 @@
                 <div class="logo-icon">
                     <i class="fab fa-whatsapp"></i>
         </div>
-                <div class="logo-text">WhatsApp Delivery Bot</div>
+                <div class="logo-text"><img src="/logo.svg" alt="Novi Logo" style="height:32px;vertical-align:middle;"> Novi</div>
             </div>
             <nav class="nav">
                 <a href="/" class="nav-link">Home</a>
@@ -320,7 +320,7 @@
             <input type="hidden" name="userId" value="<%= userId %>">
             <div>
                 <div class="setup-title">Setup Your Business</div>
-                <div class="setup-desc">Enter your business name to get started with WhatsApp Delivery Bot.</div>
+                <div class="setup-desc">Enter your business name to get started with Novi.</div>
                 <% if (typeof error !== 'undefined') { %>
                     <div class="alert"><%= error %></div>
                 <% } %>
