--- a/src/views/login.ejs
+++ b/src/views/login.ejs
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>User Login - WhatsApp Delivery Bot</title>
+    <title>User Login - Novi</title>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
     <link href="/css/theme.css" rel="stylesheet">
     <style>
@@ -300,7 +300,7 @@
                 <div class="logo-icon">
                     <i class="fab fa-whatsapp"></i>
                 </div>
-                <div class="logo-text">WhatsApp Delivery Bot</div>
+                <div class="logo-text"><img src="/logo.svg" alt="Novi Logo" style="height:32px;vertical-align:middle;"> Novi</div>
             </div>
             <nav class="nav">
                 <a href="/" class="nav-link">Home</a>
