--- a/src/views/admin/login.ejs
+++ b/src/views/admin/login.ejs
@@ -289,9 +289,9 @@
         <div class="header-content">
             <div class="logo">
                 <div class="logo-icon">
-                    <i class="fab fa-whatsapp"></i>
+                    <!-- Removed WhatsApp icon -->
                 </div>
-                <div class="logo-text"><img src="/logo.svg" alt="Novi Logo" style="height:32px;vertical-align:middle;"> Novi</div>
+                <div class="logo-text"><img src="/logo.svg" alt="Novi Logo" style="height:48px;vertical-align:middle;"> <span style="font-size:1.8rem;font-weight:700;color:#2C3E50;margin-left:0.5rem;">Novi</span></div>
             </div>
             <nav class="nav">
                 <a href="/" class="nav-link">Home</a>
