--- a/src/views/setup-business.ejs
+++ b/src/views/setup-business.ejs
@@ -303,7 +303,7 @@
                 <div class="logo-icon">
                     <!-- Removed WhatsApp icon -->
                 </div>
-                <div class="logo-text"><img src="/logo.svg" alt="Novi Logo" style="height:48px;vertical-align:middle;"> <span style="font-size:1.8rem;font-weight:700;color:#2C3E50;margin-left:0.5rem;">Novi</span></div>
+                <div class="logo-text"><img src="/logo.svg" alt="Novi Logo" style="height:40px;vertical-align:middle;"></div>
             </div>
             <nav class="nav">
                 <a href="/" class="nav-link">Home</a>
